// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeInner is high contrast mode enabled: false 1`] = `
<BodyClassModifier
  classNames={
    [
      "theme-switcher",
    ]
  }
  deps={
    {
      "documentManipulator": [typemoq mock object],
      "loadTheme": [MockFunction],
      "storeActionMessageCreator": null,
      "storesHub": null,
    }
  }
/>
`;

exports[`ThemeInner is high contrast mode enabled: true 1`] = `
<BodyClassModifier
  classNames={
    [
      "theme-switcher",
      "high-contrast-theme",
    ]
  }
  deps={
    {
      "documentManipulator": [typemoq mock object],
      "loadTheme": [MockFunction],
      "storeActionMessageCreator": null,
      "storesHub": null,
    }
  }
/>
`;
